--- a/css/system.css
+++ b/css/system.css
@@ -5,15 +5,16 @@
     --basic-font-mobile:14px;
 
     /* color variation */
-    --bakee-brown-main-100:#FDE1C5;
-    --bakee-brown-main-200:#F9C898; 
-    --bakee-brown-main-300:#F2B170; 
-    --bakee-brown-main-400:#E99D50; 
-    --bakee-brown-main-500:#DD8B38; 
-    --bakee-brown-main-600:#CD7A27; 
-    --bakee-brown-main-700:#B8691B;        
-    --bakee-brown-main-800:#A05913;
-    --bakee-brown-main-900:#874A0E;  
+    --mood-in-blue-0:#8099FF;
+    --mood-in-blue-100:#6987FD;
+    --mood-in-blue-200:#5475F9; 
+    --mood-in-blue-300:#4165F2; 
+    --mood-in-blue-400:#3257E9; 
+    --mood-in-blue-500:#264BDD; 
+    --mood-in-blue-600:#1D40CD; 
+    --mood-in-blue-700:#1637B8;        
+    --mood-in-blue-800:#112EA0;
+    --mood-in-blue-main-900:#0E2687;  
 
     --font-strong:700;
     --font-normal:400;
@@ -26,9 +27,11 @@
     --space-normal:1rem;
     --space-x-small:0.5rem;
     --space-2x-small:0.25rem;
-    --space-x-large:2rem;
-    --space-2x-large:3rem;
-    --space-3x-large:12rem;
+    --space-large:2rem;
+    --space-x-large:3rem;
+    --space-2x-large:4rem;
+    --space-3x-large:5rem;
+    --space-4x-large:12rem;
 
     /* semantic color */
     --color-inactive:#777;
