--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,27 @@ html{
     filter: brightness(0.7);
 }
 
+.hero-text{
+    position: absolute;
+    left: 20%;
+    top: 70%;
+    transform: translate(-50%, 50%);
+    display: flex;
+    flex-direction: column;
+    gap: 3rem;
+    color: #fff;
+    text-align: left;
+}
+
+.hero-text h1{
+    font-size: 3rem;
+    line-height: 1.2;
+}
+
+.hero-text p{
+    text-decoration: underline;
+}
+
 .common_frame{
     margin: 0 5rem;
     width: auto;
