--- a/css/nonMemberOrder/non-member-order-inquiry.css
+++ b/css/nonMemberOrder/non-member-order-inquiry.css
@@ -1,9 +1,8 @@
-*{
-    margin: 0;
-    padding: 0;
+html{
+    font-size: var(--basic-size-pc);
 }
 .common-frame{
-    margin: 0 5rem;
+    margin: 0 var(--space-3x-large);
     margin-top: 6rem;
 }
 .order-box{
@@ -15,7 +14,8 @@ h1{
     text-align: center;
     width: 100%;
     border-bottom: 5px solid #000;
-    padding: 1rem;
+    padding: var(--space-normal);
+    margin-top: var(--space-4x-large);
 }
 form{
     width: 100%;
@@ -33,9 +33,9 @@ form{
 }
 fieldset{
     display: flex;
-    gap: 1rem;
+    gap: var(--space-normal);
     flex-direction: column;
-    margin-top: 2rem;
+    margin-top: var(--space-large);
     border: none;
 }
 .btn-1{
