--- a/css/order/order-confirmation.css
+++ b/css/order/order-confirmation.css
@@ -1,10 +1,10 @@
-*{
-    margin: 0;
-    padding: 0;
+html{
+    font-size: var(--basic-size-pc);
 }
-.common-frame{
-    margin: 0 5rem;
-    margin-top: 4rem;
+h1{
+    text-align: center;
+    margin-top: var(--space-4x-large);
+    margin-bottom: var(--space-x-large);
 }
 .common-frame h1{
     text-align: center;
