--- a/css/signup/information.css
+++ b/css/signup/information.css
@@ -1,19 +1,13 @@
-*{
-    margin: 0;
-    padding: 0;
-}
-.common-frame{
-    margin: auto auto;
-    margin-top: 6rem;
-    max-width: 1720px;
-    width: 100%;
+html{
+    font-size: var(--basic-size-pc);
 }
 h1{
     text-align: center;
+    margin-top: var(--space-4x-large);
 }
 ol{
     list-style: none;
-    margin-top: 4rem;
+    margin-top: var(--space-2x-large);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -27,9 +21,9 @@ ol li::after{
     /* 화살표 */
     content: "";
     position: absolute;
-    top: 25%;
+    top: 0;
     right: -100%;
-    background: url("../img/lucide_chevron-right.svg") no-repeat center / contain;
+    background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
     width: 24px;
     height: 24px;    
 }
@@ -41,7 +35,7 @@ ol li.act{
     color: #000;
 }
 ol li span{
-    margin-right: 1rem;
+    margin-right: var(--space-normal);
     font-size: 0.9rem;
     
 }
@@ -52,29 +46,29 @@ ol li strong{
 .sign-form{
     margin: 0 auto;
     width: 850px;
-    margin-top: 3rem;
+    margin-top: var(--space-x-large);
 }
 fieldset {
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 1rem;
-    margin-top: 3rem;
+    gap: var(--space-normal);
+    margin-top: var(--space-x-large);
     border: none;
 }
 .sign-form h3{
     text-align: left;
     border-bottom: 2px solid black;
-    padding-bottom: 0.25rem;
+    padding-bottom: var(--space-2x-small);
 }
 .form-grop{
     display: flex;
-    gap: 1rem;
+    gap: var(--space-normal);
     text-align: left;
 }
 form{
     /* text-align: right; */
-    margin-top: 1rem;
+    margin-top: var(--space-normal);
     font-size: 1rem;
 }
 .text{
@@ -82,33 +76,36 @@ form{
     font-weight: 700;
     width: 270px;
 }
-input[type="text"], input[type="password"]{
+input[type=text]{
     width: 200px;
-    height: 1.5rem;
+    height: 20px;
 }
-.user-phon input[type="text"], .birth input[type="text"]{
-    width: 4rem;
-    height: 1.5rem;
+#user-pw, #user-pw-re{
+    width: 200px;
+    height: 20px;
 }
-
+.radio{
+    display: flex;
+    gap: var(--space-normal);
+}
 .radio-form{
-    width: 1rem;
-    height: 1rem;
+    width: 20px;
+    height: 20px;
     margin-right: 0.5rem;
 }
 .form-grop .grop-hor{
-    gap: 1rem;
+    gap: var(--space-normal);
     display: flex;
     justify-content: center;
     align-items: center;
 }
 .grop-ver{
-    gap: 1rem;
+    gap: var(--space-normal);
     display: flex;
     flex-direction:column;
 }
 .form-grop .password{
-    gap: 0.5rem;
+    gap: var(--space-x-small);
 }
 .form-grop .password p{
     font-size: 0.8rem;
@@ -126,13 +123,25 @@ input[type="text"], input[type="password"]{
     color: #fff;
     cursor: pointer;
 }
+#user-phon1, #user-phon2, #user-phon3{
+    width: 40px;
+    height: 20px;
+}
+.user-phon span{
+    margin: 0 var(--space-x-small);
+}
+#user-year{
+    width: 34px;
+    margin-right: var(--space-x-small);
+}
 #user-mon, #user-day{
-    width: 30px;
-    margin-left: 1rem;
+    width: 25px;
+    margin-left: var(--space-normal);
+    margin-right: var(--space-x-small);
 }
 .email-selext{
     font-size: 1rem;
-    height: 1.5rem;
+    height: 30px;
 }
 .next-step a{
     width: 425px;
