--- a/css/system.css
+++ b/css/system.css
@@ -106,3 +106,21 @@ p{
   height: 32px;
   border-radius: 50%;
 }
+
+@media (max-width: 1440px){
+    html{
+        font-size: var(--basic-font-tab);
+    }
+    .common_frame{
+        margin: 0 2rem;
+    }
+}
+
+@media (max-width: 768px){
+    html{
+        font-size: var(--basic-font-mobile);
+    }
+    .common_frame{
+        margin: 0 1rem;
+    }
+}
