--- a/css/header.css
+++ b/css/header.css
@@ -1,6 +1,3 @@
-html{
-    font-size: var(--base-size-pc);
-}
 .intro {
     position: fixed;
     width: 100%;
@@ -146,3 +143,6 @@ header.on{
     display: block;
 }
 
+.header-smart{
+    display: none;
+}
