--- a/css/header_smart.css
+++ b/css/header_smart.css
@@ -1,6 +1,6 @@
 @media (max-width: 1440px){
     header{display: none;}
-    .header-smart{
+    .header_smart{
         display: block;
         background-color: #000;
         position: fixed;
