--- a/css/signup/information.css
+++ b/css/signup/information.css
@@ -6,38 +6,30 @@ h1{
     margin-top: var(--space-4x-large);
 }
 ol{
+    margin: 0 auto;
+    max-width: 850px;
     list-style: none;
     margin-top: var(--space-2x-large);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 15rem;
-    color: #818181;
+    color: var(--color-inactive);
+    flex-wrap: nowrap;
+    text-align: center;
 }
-ol li{
-    position: relative;
-}
-ol li::after{
-    /* 화살표 */
-    content: "";
-    position: absolute;
-    top: 0;
-    right: -100%;
+ol li.arrow {
+    flex: 0 0 auto;
+    width: 1.25rem;
+    height: 1.25rem;
     background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
-    width: 24px;
-    height: 24px;    
-}
-ol li:last-child::after{
-    /* 마지막 li에는 화살표 표시X */
-    content: none;
+    flex-wrap: nowrap;
 }
 ol li.act{
     color: #000;
 }
 ol li span{
     margin-right: var(--space-normal);
-    font-size: 0.9rem;
-    
+    font-size: 0.9rem;  
 }
 ol li strong{
     font-size: 1.25rem;
@@ -53,7 +45,7 @@ fieldset {
     flex-direction: column;
     text-align: center;
     gap: var(--space-normal);
-    margin-top: var(--space-x-large);
+    margin-top: var(--space-large);
     border: none;
 }
 .sign-form h3{
@@ -67,22 +59,67 @@ fieldset {
     text-align: left;
 }
 form{
-    /* text-align: right; */
     margin-top: var(--space-normal);
-    font-size: 1rem;
 }
 .text{
-    font-size: 1rem;
     font-weight: 700;
     width: 270px;
 }
+input[type=text],
+#user-name,
+#user-pw, 
+#user-pw-re,
+#user-email-id, 
+input[name="user-email-domain"],
+#user-year,
+#user-mon, 
+#user-day,
+#user-phon1, 
+#user-phon2, 
+#user-phon3,
+.address-box,
+input[name="user-address-detail"] {
+    height: 40px;
+    padding: 0 0.8rem;
+}
 input[type=text]{
     width: 200px;
-    height: 20px;
 }
 #user-pw, #user-pw-re{
     width: 200px;
-    height: 20px;
+}
+.email-selext{
+    height: 40px;
+    padding: 0 0.5rem;
+}
+#user-year{
+    width: 34px;
+    padding: 0 0.3rem;
+    margin-right: var(--space-x-small);
+}
+#user-mon, #user-day{
+    width: 25px;
+    padding: 0 0.3rem;
+    margin-left: var(--space-normal);
+    margin-right: var(--space-x-small);
+}
+#user-phon1{
+    width: 100px;
+}
+#user-phon2, #user-phon3{
+    width: 40px;
+}
+.form-grop .grop-ver .grop-hor .address-box,
+.form-grop .grop-ver .address-box{
+    width: 400px;
+}
+.btn-check {
+    background-color: #000;
+    font-weight: 700;
+    width: 125px;
+    height: 40px;
+    color: #fff;
+    cursor: pointer;
 }
 .radio{
     display: flex;
@@ -111,37 +148,8 @@ input[type=text]{
     font-size: 0.8rem;
     color: #818181;
 }
-.form-grop .grop-ver .grop-hor .address-box,
-.form-grop .grop-ver .address-box{
-    width: 400px
-}
-.btn-check {
-    background-color: #000;
-    font-size: 1rem;
-    font-weight: 700;
-    width: 125px;
-    color: #fff;
-    cursor: pointer;
-}
-#user-phon1, #user-phon2, #user-phon3{
-    width: 40px;
-    height: 20px;
-}
 .user-phon span{
     margin: 0 var(--space-x-small);
-}
-#user-year{
-    width: 34px;
-    margin-right: var(--space-x-small);
-}
-#user-mon, #user-day{
-    width: 25px;
-    margin-left: var(--space-normal);
-    margin-right: var(--space-x-small);
-}
-.email-selext{
-    font-size: 1rem;
-    height: 30px;
 }
 .next-step a{
     width: 425px;
@@ -156,4 +164,194 @@ input[type=text]{
     color: #fff;
     text-decoration: none;
     font-weight: 700;
+}
+.marketing{
+    white-space: pre-wrap;
+}
+@media (max-width:1024px) {
+    html{
+        font-size: var(--basic-size-tap);
+    }
+    .common_frame{
+        margin: 0 3rem;
+    }
+    ol{
+        justify-content: space-between;
+        gap: var(--space-3x-large);
+    }
+    .sign-form{
+        width: 100%;
+    }
+}
+@media (max-width: 768px) {
+    html {
+        font-size: var(--basic-size-mobile);
+    }
+    .common_frame {
+        margin: 0 1rem;
+    }
+    h1 {
+        font-size: 1.5rem;
+        margin-top: var(--space-2x-large);
+    }
+    ol {
+        display: none;
+    }
+    .sign-form {
+        width: 100%;
+        margin-top: var(--space-large);
+    }
+    .sign-form h3 {
+        font-size: 1.1rem;
+        padding-bottom: var(--space-x-small);
+    }
+    .form-grop {
+        display: flex;
+        flex-direction: column;
+        gap: 0.3rem;
+        text-align: left;
+        align-items: stretch;
+    }
+    .text {
+        width: 100%;
+        font-size: 0.95rem;
+        margin-bottom: 0.3rem;
+        font-weight: 700;
+    }
+    .form-grop .grop-hor {
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        gap: 0.3rem;
+    }
+    input[type=text] {
+        flex: 1;
+        width: 100%;
+    }
+    #user-pw, #user-pw-re {
+        width: 100%;
+    }
+    #user-name {
+        width: 100%;
+    }
+    .form-grop .password {
+        width: 100%;
+    }
+    .form-grop .password p {
+        font-size: 0.75rem;
+        margin-top: 0.3rem;
+        line-height: 1.3;
+    }
+    .birth {
+        display: flex;
+        gap: 0.3rem;
+        align-items: center;
+        width: 100%;
+    }
+    #user-year {
+        width: 25%;
+        margin-right: 0.2rem;
+        padding: 0 0.5rem;
+    }
+    #user-mon, #user-day {
+        width: 20%;
+        margin-left: 0.3rem;
+        margin-right: 0.2rem;
+        padding: 0 0.5rem;
+    }
+    .email-input {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 0.3rem;
+        align-items: center;
+        width: 100%;
+    } 
+    .email-input > span {
+        display: block;
+        flex-shrink: 0;
+    }
+    #user-email-id {
+        flex: 1;
+        min-width: 0;
+    }
+    .email-input input[name="user-email-domain"] {
+        flex: 1;
+        min-width: 0;
+    }
+    .email-selext {
+        flex: 0 0 auto;
+        width: 100px;
+        padding: 0 0.5rem;
+    }
+    .user-phon {
+        display: flex;
+        gap: 0.3rem;
+        align-items: center;
+        flex: 1;
+        min-width: 0;
+    }
+    #user-phon1, #user-phon2, #user-phon3 {
+        flex: 1;
+        padding: 0 0.5rem;
+    }
+    .user-phon span {
+        margin: 0;
+        flex-shrink: 0;
+    }
+    .phone-check {
+        margin: 0;
+        flex-shrink: 0;
+    }
+    .grop-ver {
+        gap: 0.3rem;
+        width: 100%;
+    }
+    .form-grop .grop-ver .grop-hor .address-box,
+    .form-grop .grop-ver .address-box {
+        width: 100%;
+    }
+    input[name="user-address-detail"] {
+    width: 100%;
+    height: 40px;
+    padding: 0 0.8rem;
+    box-sizing: border-box;
+}
+    .form-grop .grop-ver .grop-hor {
+        width: 100%;
+    }
+    .btn-check {
+        width: auto;
+        min-width: 100px;
+        font-size: 0.95rem;
+        white-space: nowrap;
+        padding: 0 1.2rem;
+        border: none;
+        flex-shrink: 0;
+    }
+    .radio {
+        display: flex;
+        gap: 1.5rem;
+        align-items: center;
+    }
+    .radio label {
+        display: flex;
+        align-items: center;
+    }
+    .radio-form {
+        width: 20px;
+        height: 20px;
+        margin-right: 0.5rem;
+    }
+    .next-step a {
+        width: 100%;
+        max-width: 100%;
+        height: 50px;
+        font-size: 1.1rem;
+        margin: 3rem auto 4rem;
+    }
+    input {
+        box-sizing: border-box;
+        height: 40px !important;
+        line-height: 40px;
+    }
 }
