--- a/css/signup/sign-end.css
+++ b/css/signup/sign-end.css
@@ -6,30 +6,24 @@ h1{
     margin-top: var(--space-4x-large);
 }
 ol{
+    margin: 0 auto;
+    max-width: 850px;
     list-style: none;
     margin-top: var(--space-2x-large);
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
-    gap: 15rem;
-    color: #818181;
+    gap: clamp(1rem, 5vw, 15rem);
+    color: var(--color-inactive);
+    flex-wrap: nowrap;
+    text-align: center;
 }
-ol li{
-    position: relative;
-}
-ol li::after{
-    /* 화살표 */
-    content: "";
-    position: absolute;
-    top: 0;
-    right: -100%;
+ol li.arrow {
+    flex: 0 0 auto; /* 크기 고정 */
+    width: 1.25rem;
+    height: 1.25rem;
     background: url("../../resource/signup/lucide_chevron-right.svg") no-repeat center / contain;
-    width: 24px;
-    height: 24px;    
-}
-ol li:last-child::after{
-    /* 마지막 li에는 화살표 표시X */
-    content: none;
+    flex-wrap: nowrap;
 }
 ol li.act{
     color: #000;
@@ -43,7 +37,6 @@ ol li strong{
     font-size: 1.25rem;
     font-weight: 700;
 }
-
 .common_frame .txt{
     margin-top: 6rem;
     text-align: center;
@@ -85,3 +78,41 @@ ol li strong{
     text-decoration: none;
 }
 
+@media (max-width:1024px) {
+    html{
+        font-size: var(--basic-size-tap);
+    }
+    .common_frame{
+        margin: 0 3rem;
+    }
+    ol{
+        max-width: 790px;
+        justify-content: space-between;
+        gap: var(--space-3x-large);
+    }
+
+
+}
+@media (max-width: 768px) {
+    html {
+        font-size: var(--basic-size-mobile);
+    }
+    .common_frame {
+        margin: 0 1rem;
+    }
+    ol {
+        width: 100%;
+        max-width: 100%;
+        flex-wrap: wrap;
+        gap: 0.5rem;
+    }
+    ol li {
+        flex: 1 1 auto;
+    }
+    .but-main a{
+        width: 245px;
+    }
+    .but-login a{
+        width: 245px;
+    }
+}
