--- a/css/community/community.css
+++ b/css/community/community.css
@@ -1,3 +1,9 @@
+@media (min-width:1920px) {
+    body{
+        max-width: 1920px;
+        margin: 0 auto;
+    }
+}
 html{
     font-size: var(--basic-size-pc);
 }
@@ -13,10 +19,27 @@ table{
     border-top: 3px solid #000;
     border-bottom: 1px solid #000;
 }
-tr{
-    height: 68px;
-    border: 1px solid rebeccapurple;
+th{
     text-align: center;
+}
+tr{
+    height: 64px;
+    text-align: center;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1rem;
+    padding: var(--space-normal) auto;
+    text-align: center;
+}
+td, th{
+    flex: 1%;
+}
+.title_date{
+    flex: 60%;
+}
+.date{
+    flex: 20%;
 }
 .pagination-community{
     margin-top: var(--space-x-large);
@@ -25,7 +48,55 @@ tr{
     align-items: center;
     gap: var(--space-normal);
 }
-img{
+.hidden-date{
+    display: none;
+}
+.pagination-community img{
     width: 1.25rem;
     height: 1.25rem;
+}
+
+@media (max-width:1024px){
+    html{
+    font-size: var(--basic-font-tab);
+}
+    .common_frame{
+        width: auto;
+        margin: 0 auto; 
+        padding: 0 3rem;
+        /* 나중에 수정 */
+    }
+}
+@media (max-width:768px){
+    html{
+    font-size: var(--basic-font-mobile);
+}
+    .common_frame{
+        width: auto;
+        margin: 0 auto;
+        padding: 0 1rem;
+        /* 나중에 수정 */
+    }
+    thead{
+        display: none;
+    }
+    tbody tr .date{
+        display: none;
+    }
+    tr{
+        padding: var(--space-normal) 0;
+    }
+    .title_date{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        text-align: left;
+        gap: var(--space-x-small);
+    }
+    .hidden-date{
+        display: block;
+    }
+    .title_date{
+        flex: 80%;
+    }
 }
