--- a/css/signup/sign-end.css
+++ b/css/signup/sign-end.css
@@ -1,3 +1,9 @@
+@media (min-width:1920px) {
+    body{
+        max-width: 1920px;
+        margin: 0 auto;
+    }
+}
 html{
     font-size: var(--basic-size-pc);
 }
