--- a/css/header_smart.css
+++ b/css/header_smart.css
@@ -1,19 +1,160 @@
-@media (max-width: 1440px){
+@media (max-width: 1460px){
     header{display: none;}
     .header_smart{
         display: block;
-        background-color: #000;
-        position: fixed;
         width: 100%;
-        left: 0;
+        background-color: #000;
+        color: #fff;
+        position: fixed;
         top: 0;
-        z-index: 10000;
-        padding: 1rem 0;
+        left: 0;
+        z-index: 1000;
     }
 
-    .hds {
+    .header_smart>.common_frame{
         display: flex;
         justify-content: space-between;
-        align-items: center;    
+        align-items: center;
+    }
+
+    .logo_smart{
+        display: flex;
+        align-items: center;
+    }
+
+    .logo_smart a{
+        display: block;
+    }
+
+    .logo_smart img{
+        height: 1.5rem;
+    }
+
+    .btn_all_menu {
+        cursor: pointer;
+        padding: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn_all_menu img {
+        height: 1.5rem;
+    }
+
+    .hidden_gnb {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100vh;
+        background-color: #000;
+        overflow-y: auto;
+        transform: translateX(100%);
+        transition: transform 0.3s ease 0s;
+        z-index: 1001;
+    }
+
+    .hidden_gnb.on{
+        transform: translateX(0);
+    }
+
+    .hg1{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding-top: 2.6rem;
+    }
+
+    .btn_closed {
+        cursor: pointer;
+        padding: 0.5rem;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .btn_closed img {
+        width: 1.5rem;
+        height: 1.5rem;
+    }
+
+    .hg_lnb{
+        display: flex;
+        justify-content: flex-end;
+        gap: 1rem;
+        color: #fff;
+        padding: .5rem 0;
+    }
+
+    .menu_icon{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: .5rem;
+        font-weight: 700;
+    }
+
+    .hg3{
+        padding-top: 1rem;
+    }
+
+    .gnb_smart a:hover{
+        text-decoration: underline;
+    }
+
+    .gnb_smart li{
+        padding: .5rem 0;
+    }
+
+    .smart_dep1{
+        border-bottom: 1px solid #fff;
+        max-height: 1.4rem;
+        overflow: hidden;
+        font-weight: 700;
+    }
+
+    .smart_dep1.on{
+        max-height: 2000px;
+    }
+
+    .smart_dep2{
+        border-bottom: 1px solid #fff;
+        max-height: 1.4rem;
+        overflow: hidden;
+    }
+
+    .smart_dep2.on{
+        max-height: 1000px;
+    }
+
+    .smart_dep2>a{
+        display: block;
+        padding: .5rem 0;
+        font-weight: 700;
+    }
+
+    .smart_dep2:last-child {
+        border-bottom: none;
+    }
+
+    .meun_img{
+        width: 100%;
+        aspect-ratio: 880/360;
+        margin-bottom: .5rem;
+    }
+
+    .meun_img img{
+        width: 100%;
+        line-height: 0;
+        object-fit: cover;
+    }
+}
+
+@media (max-width: 768px){
+    .logo_smart img{
+        height: 1rem;
+    }
+    .btn_all_menu img {
+        height: 1rem;
     }
 }
