--- a/css/order/order-finsh.css
+++ b/css/order/order-finsh.css
@@ -35,7 +35,8 @@ ol li.arrow {
 ol li.act{
     color: #000;
 }
-ol li span{
+ol li em{
+    font-style: inherit;
     margin-right: 1rem;
     font-size: 0.9rem;
 }
