--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,4 @@
-html{
-    font-size: var(--basic-size-pc);
-}
+
 
 .hero-banner {
     width: 100%;
@@ -20,9 +18,8 @@ html{
 
 .hero-text{
     position: absolute;
-    left: 20%;
+    left: 5%;
     top: 70%;
-    transform: translate(-50%, 50%);
     display: flex;
     flex-direction: column;
     gap: 3rem;
@@ -94,7 +91,6 @@ html{
     .sub-cont{
         display: flex;
         width: auto;
-        height: 100vh;
         & .slider{
             flex: 1;
             /* border: 1px solid #000; */
@@ -108,6 +104,8 @@ html{
     }
 }
 
+
+
 .popup .swiper-pagination-bullet-active {
     background: #0E2687;
     opacity: var(--swiper-pagination-bullet-opacity,1);
@@ -120,7 +118,6 @@ html{
 
 .popuplist a img{
     width: 100%;
-    height: 100%;
     object-fit: cover;
 }
 
@@ -143,12 +140,17 @@ html{
     object-fit: cover;
 }
 
-.subbanner a img{
+.tab_banner{display: none;}
+.mo_banner{display: none;}
+
+.sub-banner{
     width: 100%;
-    height: 100%;
-    object-fit: cover;
 }
 
+.subbanner a img{
+    width: 100%;
+    object-fit: cover;
+}
 
 .subbanner .swiper-pagination-bullet-active {
     background: #fff;
